[package]
name = "str0m-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = { version = "3.6.2", features = ["ssl"] }
rustls = "0.23.19"
serde_json = "1.0.133"
str0m = "0.6.3"
systemstat = "0.2.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
